@@ -1,22 +1,42 @@
 /**
- * Copyright (c) 2023, RTE (http://www.rte-france.com)
+ * Copyright (c) 2026, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  * SPDX-License-Identifier: MPL-2.0
  */
-package com.powsybl.iidm.modification.util;
+package com.powsybl.iidm.network.util;
 
 import com.powsybl.iidm.network.*;
+import com.powsybl.iidm.network.regulation.*;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.OptionalDouble;
 import java.util.stream.Stream;
 
+/**
+ * @author Matthieu SAUR {@literal <matthieu.saur at rte-france.com>}
+ */
 public final class VoltageRegulationUtils {
-
     private VoltageRegulationUtils() {
+        /* This utility class should not be instantiated */
+    }
+
+    public static void createVoltageRegulationBackwardCompatibility(VoltageRegulationAdder<?> adder, double targetV, double targetQ, Boolean voltageRegulatorOn, Terminal terminal) {
+        // VOLTAGE case
+        if (Boolean.TRUE.equals(voltageRegulatorOn)) {
+            adder.withMode(RegulationMode.VOLTAGE)
+                .withTargetValue(targetV)
+                .withTerminal(terminal)
+                .add();
+            // REACTIVE Power case
+        } else if (Boolean.FALSE.equals(voltageRegulatorOn) && !Double.isNaN(targetQ)) {
+            adder.withMode(RegulationMode.REACTIVE_POWER)
+                .withTargetValue(targetQ)
+                .withTerminal(terminal)
+                .add();
+        }
     }
 
     /**
@@ -24,9 +44,10 @@ public final class VoltageRegulationUtils {
      */
     public static Stream<Generator> getRegulatingGenerators(Network network, Bus controlledBus) {
         if (controlledBus != null) {
-            return network.getGeneratorStream().filter(Generator::isVoltageRegulatorOn)
-                    .filter(g -> g.getRegulatingTerminal().getBusView().getBus() != null)
-                    .filter(g -> controlledBus.equals(g.getRegulatingTerminal().getBusView().getBus()));
+            return network.getGeneratorStream()
+                .filter(g -> g.isRegulatingWithMode(RegulationMode.VOLTAGE))
+                .filter(g -> g.getRegulatingTerminal().getBusView().getBus() != null)
+                .filter(g -> controlledBus.equals(g.getRegulatingTerminal().getBusView().getBus()));
         } else {
             return Stream.empty();
         }
@@ -37,7 +58,8 @@ public final class VoltageRegulationUtils {
      */
     public static Stream<ShuntCompensator> getRegulatingShuntCompensators(Network network, Bus controlledBus) {
         if (controlledBus != null) {
-            return network.getShuntCompensatorStream().filter(ShuntCompensator::isVoltageRegulatorOn)
+            return network.getShuntCompensatorStream()
+                    .filter(shuntCompensator -> shuntCompensator.isRegulatingWithMode(RegulationMode.VOLTAGE))
                     .filter(sh -> sh.getRegulatingTerminal().getBusView().getBus() != null)
                     .filter(sh -> controlledBus.equals(sh.getRegulatingTerminal().getBusView().getBus()));
         } else {
@@ -54,23 +76,23 @@ public final class VoltageRegulationUtils {
      * @return the targetV, or {@link OptionalDouble#empty()} if no acceptable targetV has been found
      */
     public static OptionalDouble getTargetVForRegulatingElement(Network network, Bus controlledBus, String regulatingElementId,
-                                                                 IdentifiableType identifiableType) {
+                                                                IdentifiableType identifiableType) {
         List<Double> targets = switch (identifiableType) {
             case GENERATOR -> getRegulatingGenerators(network, controlledBus)
-                    .filter(g -> !g.getId().equals(regulatingElementId))
-                    .map(Generator::getTargetV).distinct().toList();
+                .filter(g -> !g.getId().equals(regulatingElementId))
+                .map(Generator::getVoltageRegulation)
+                .map(VoltageRegulation::getTargetValue).distinct().toList();
             case SHUNT_COMPENSATOR -> getRegulatingShuntCompensators(network, controlledBus)
-                    .filter(g -> !g.getId().equals(regulatingElementId))
-                    .map(ShuntCompensator::getTargetV).distinct().toList();
+                .filter(g -> !g.getId().equals(regulatingElementId))
+                .map(ShuntCompensator::getTargetV).distinct().toList();
             default -> new ArrayList<>();
         };
-        if (targets.isEmpty() || targets.size() > 1) {
+        if (targets.size() != 1) {
             // it means that the network cannot give valuable information about targetV, this field has to be given in
             // the network modification.
             return OptionalDouble.empty();
         } else { // targets.size() == 1
-            return OptionalDouble.of(targets.get(0));
+            return OptionalDouble.of(targets.getFirst());
         }
     }
-
 }
